remove: Iletisim sayfasindan Turkel merkez ofis proje ve faks bilgileri kaldirildi
KALDIRILLAN BILGILER:
- Proje: +90 (212) 270 07 28
- Faks: +90 (212) 283 00 74-75-76
- Faks: +90 (212) 278 64 02

KORUNAN BILGILER:
- Telefon: +90 (212) 284 23 00
- Email: info@turkel.com.tr
- Adres bilgileri

ETKILENEN SAYFALAR:
- /tr/iletisim (Turkce)
- /en/contact (Ingilizce)

TYPESCRIPT HATALARI:
- HTMLFormElement type casting eklendi
- Form reset method type guvenli hale getirildi

SONUC: Turkel merkez ofis sadece ana telefon numarasi ile gorunur

--- a/src/pages/en/contact.astro
+++ b/src/pages/en/contact.astro
@@ -22,10 +22,7 @@ const offices = [
     name: 'Türkel Headquarters',
     address: 'Huzur Mah. Fatih Cad. 4.Levent Plaza 67/6\n4.Levent, Sarıyer 34396 / Istanbul – Turkey',
     phones: [
-      { label: 'Phone', number: '+90 (212) 284 23 00' },
-      { label: 'Project', number: '+90 (212) 270 07 28' },
-      { label: 'Fax', number: '+90 (212) 283 00 74-75-76' },
-      { label: 'Fax', number: '+90 (212) 278 64 02' }
+      { label: 'Phone', number: '+90 (212) 284 23 00' }
     ],
     email: 'info@turkel.com.tr',
     country: 'Turkey'
