--- a/src/pages/tr/ekibimiz.astro
+++ b/src/pages/tr/ekibimiz.astro
@@ -48,6 +48,7 @@ const departmentOrder = [
   'Finans & Muhasebe',
   'Dış İlişkiler ve Uluslararası Satış',
   'Lojistik ve Ulaşım',
+  'Yönetim Kurulu Başkan Asistanı',
   'Bilgi İşlem',
   'Grafik Tasarım'
 ];
