--- a/src/pages/en/our-team.astro
+++ b/src/pages/en/our-team.astro
@@ -48,6 +48,7 @@ const departmentOrder = [
   'Finance & Accounting',
   'Foreign Relations and International Sales',
   'Logistics and Transportation',
+  'Board Chairman Assistant',
   'Information Technology',
   'Graphic Design'
 ];
