--- a/src/components/HeroCard.astro
+++ b/src/components/HeroCard.astro
@@ -188,24 +188,13 @@ const { locale, card } = Astro.props;
     </div>
 
     <!-- Google Maps -->
-    <div class="px-[15px] sm:px-[20px] lg:px-[30px] mb-6 sm:mb-7 lg:mb-8">
-      <div class="rounded-[6px] sm:rounded-[8px] lg:rounded-lg h-[120px] sm:h-[160px] lg:h-48 overflow-hidden">
-        {card.mapsEmbed ? (
+    {card.mapsEmbed && (
+      <div class="px-[15px] sm:px-[20px] lg:px-[30px] mb-6 sm:mb-7 lg:mb-8">
+        <div class="rounded-[6px] sm:rounded-[8px] lg:rounded-lg h-[120px] sm:h-[160px] lg:h-48 overflow-hidden">
           <div set:html={card.mapsEmbed} class="w-full h-full" />
-        ) : (
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2906.5739536742!2d76.90288781544!3d43.22475328484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38836f1b5b5b5b5b%3A0x104a5a5a5a5a5a5a!2sAtakent%20Exhibition%20Center!5e0!3m2!1sen!2str!4v1640000000000!5m2!1sen!2str"
-            width="100%"
-            height="100%"
-            style="border:0;"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-            title="Fuar Lokasyonu"
-          ></iframe>
-        )}
+        </div>
       </div>
-    </div>
+    )}
 
 
   </div>
